--- a/week1/2.md
+++ b/week1/2.md
@@ -2,8 +2,196 @@
 (시뮬레이션) 톱니바퀴: https://www.acmicpc.net/problem/14891
 
 ## Question Summary
+시뮬레이션 문제는 좀 귀찮구먼...
+그런데 함수형 프로그래밍 강의를 들었는데, 그렇게 하면 뭔가 좀 쉬운것 같다는 생각이 든다. 함수를 통해서 선언적으로 처리하는게 시뮬레이션 문제 풀이에는 더 직관적인것 같다(머리가 더 좋으면 더 쉽게 해결할 수 있겠지만, 부족하게 타고난 cpu와 메모리도 커버치는데 도움을 주는 것 같다.)
+
 
 ## My solution summary
+일단 나는 문제를 어떤곳에서 돌리느냐에 따라, 
+
+1. 선택한 톱니바퀴의 왼쪽을 차례로 돌리는것
+2. 선택한 톱니바퀴의 오른쪽을 차례로 돌리는 것
+
+이때 `rotate_self`라는 함수를 만들었는데, 몇번째 톱니 바퀴인지(index), 방향 dire로 제어한다. 이때 dire로 들어올 수 있는 값은 0, 1, -1 로 0이면 무시하고 1이면 시계방향(array값을 index+1씩해줌), -1이면 그 반대로 한다. 
+
+그리고 톱니바퀴와 방향은 `which, dire`라는 변수로 입력 받는데,
+which 1, 2, 3, 4를 각각 받는다. 
+
+- `which=1`: 다 오른쪽으로 순서대로 검사한다. 
+
+- `which=2`: 왼쪽하나 체크먼저하고, 오른쪽으로 순서대로 검사한다. 
+
+- `which=3`: 오른쪽 하나만 체크먼저하고, 왼쪽으로 순서대로 검사한다. 
+
+- `which=4`: 다 왼쪽으로 순서대로 검사한다. 
+
+
+위의 네가지 경우 모두 일단 자기를 먼저 돌린다. `rotate_self(str, which, dire);` 이렇게. 
+
+- 오른쪽 톱니바퀴랑 비교하는 로직은 아래와 같다. 
+```c++
+// 다른가 비교하고 다르면 반대로돌아가고, 아니면 0으로 만든다
+dire = str[0][2+dire] != str[1][6] ? dire * -1: 0; 
+rotate_self(str, 1, dire);
+```
+이렇게 현재꺼 2번과 그 오른쪽꺼 6번이랑 비교를 한다. 근데 이미 돌아간 경우에는 dire을 더해서 한칸 전, 한칸 후에 대해서 계산을 해줘야한다. 이때 값을 비교해서 다르면 `dire * -1`를 해서 반대로 돌아가게 한다. 같으면 그냥 0이되서 안돌아가게 한다. 
+
+근데 이제 연쇄적으로 더 오른쪽에 있는애들을 비교를 해야하는데, 이는 아래와 같이 처리했다. 
+
+```c++
+// 0이면 무조건 또 0이라고 나와서 안돔
+dire = (dire != 0 && str[1][2+dire] != str[2][6]) ? dire * -1: 0;
+rotate_self(str, 2, dire);
+```
+
+dire 를 하나더 검사하게해서(사실 안해도 어차피 0 되는데 더 눈에 띄게) 이전에 0이었으면 그냥 안돌아가게 한다. 
+
+
+- 왼쪽 톱니바퀴랑 비교하는 로직은 아래와 같다. 
+```c++
+dire = str[3][6+dire] != str[2][2] ? dire * -1: 0; 
+rotate_self(str, 2, dire);
+```
+왼쪽으로 가는것도 비슷한데 비교대상만 다르다. 비교할때 현재 6번째랑 그왼쪽거 2번째 톱니바퀴랑 비교해서 다르면 반대로 돌아가게 한다. 
+
+
+```c++
+// 0이면 무조건 또 0이라고 나와서 안돔
+dire = (dire != 0 && str[2][6+dire] != str[1][2]) ? dire * -1: 0; 
+rotate_self(str, 1, dire);
+```
+
+이때 누적해서 계산할 수 있도록 했다. 
+
+
+- 후기 
+  빨리 못풀어서 그렇지 풀수는 있어졌다는 점에서 대견하다 말할수있겠다~
 
 ## My code
 
+```c++
+/******************************************************************************
+
+Welcome to GDB Online.
+GDB online is an online compiler and debugger tool for C, C++, Python, Java, PHP, Ruby, Perl,
+C#, VB, Swift, Pascal, Fortran, Haskell, Objective-C, Assembly, HTML, CSS, JS, SQLite, Prolog.
+Code, Compile, Run and Debug online from anywhere in world.
+
+*******************************************************************************/
+#include <stdio.h>
+#include <vector>
+#include <iostream>
+using namespace std;
+
+void rotate_self(vector<string>& str, int index, int dire){
+    if(dire == 1){
+        char temp = str[index][7];
+        for(int i = 7; i > 0; i--){
+            str[index][i] = str[index][i-1];
+        }
+        str[index][0] = temp;
+    }else if(dire == -1){
+        char temp = str[index][0];
+        for(int i = 0; i < 7; i++){
+            str[index][i] = str[index][i+1];
+        }
+        str[index][7] = temp;
+    }
+}
+
+int main()
+{
+    vector<string> str(4, "");
+    
+    for(int i = 0; i < 4; i++){
+        cin >> str[i];
+    }
+
+    int k; cin >> k;
+    
+    for(int i = 0; i < k; i++){
+        int which, dire; cin >> which >> dire;
+        
+        if(which == 1){
+            rotate_self(str, 0, dire);
+            
+            // 다른가 비교하고 다르면 반대로돌아가고, 아니면 0으로 만든다
+            dire = str[0][2+dire] != str[1][6] ? dire * -1: 0; 
+            rotate_self(str, 1, dire);
+            
+            // 0이면 무조건 또 0이라고 나와서 안돔
+            dire = (dire != 0 && str[1][2+dire] != str[2][6]) ? dire * -1: 0;
+            rotate_self(str, 2, dire);
+            
+            // 0이면 무조건 또 0이라고 나와서 안돔
+            dire = (dire != 0 && str[2][2+dire] != str[3][6]) ? dire * -1: 0;
+            rotate_self(str, 3, dire);
+        }else if(which == 2){
+            rotate_self(str, 1, dire);
+         
+            // 왼쪽거 돌게하기
+            rotate_self(str, 0, str[1][6+dire] != str[0][2] ? dire * -1: 0);
+            
+            // 오른쪽거 돌게하기
+            dire = str[1][2+dire] != str[2][6] ? dire * -1: 0;             
+            rotate_self(str, 2, dire);
+            
+            // 오른쪽거 돌게하기 
+            dire = (dire != 0 && str[2][2+dire] != str[3][6]) ? dire * -1: 0;
+            rotate_self(str, 3, dire);
+        }else if(which == 3){
+            rotate_self(str, 2, dire);
+            
+            // 오른쪽거 돌게하기 
+            rotate_self(str, 3, str[2][2+dire] != str[3][6] ? dire * -1: 0);
+            
+            // 왼쪽거 돌기
+            dire = str[2][6+dire] != str[1][2] ? dire * -1: 0; 
+            rotate_self(str, 1, dire);
+            
+            // 왼쪽거 돌기
+            dire = (dire != 0 && str[1][6+dire] != str[0][2]) ? dire * -1: 0;
+            rotate_self(str, 0, dire);
+            
+        }else if(which == 4){
+            rotate_self(str, 3, dire);
+            // 다른가 비교하고 다르면 반대로돌아가고, 아니면 0으로 만든다
+            dire = str[3][6+dire] != str[2][2] ? dire * -1: 0; 
+            rotate_self(str, 2, dire);
+            
+            // 0이면 무조건 또 0이라고 나와서 안돔
+            dire = (dire != 0 && str[2][6+dire] != str[1][2]) ? dire * -1: 0; 
+            rotate_self(str, 1, dire);
+            
+            // 0이면 무조건 또 0이라고 나와서 안돔
+            dire = (dire != 0 && str[1][6+dire] != str[0][2]) ? dire * -1: 0; 
+            rotate_self(str, 0, dire);
+        }
+    }
+    
+    int answer = 0;
+    
+    if(str[0][0] == '1'){
+        answer+=1;
+    }
+    
+    if(str[1][0] == '1'){
+        answer+=2;
+    }
+    
+    if(str[2][0] == '1'){
+        answer+=4;
+    }
+    
+    if(str[3][0] == '1'){
+        answer+=8;
+    }
+    
+    // cout << str[0] << "\n";
+    // cout << str[1] << "\n";
+    // cout << str[2] << "\n";
+    // cout << str[3] << "\n";
+    cout << answer << "\n";
+    return 0;
+}
+```
