--- a/week1/3.md
+++ b/week1/3.md
@@ -4,6 +4,100 @@
 ## Question Summary
 
 ## My solution summary
+톱니바퀴 1번이랑 같다. 니바퀴: https://www.acmicpc.net/problem/14891 이걸 너무 비효율 적으로 푼 면이 없지 않아 있어서, for loop으로 좀더 쓸데없는건 루프 안돌도록 만들었다. 어쨋거나 얘도 그냥 string만더 받는거지 같은거다. 
+
+시뮬레이션 문제는 함수를 잘 활용해서 나한테 의미가 명확해야하는구나를 깨달을 수 있었던 문제이다. 
 
 ## My code
+```c++
+/******************************************************************************
 
+Welcome to GDB Online.
+GDB online is an online compiler and debugger tool for C, C++, Python, Java, PHP, Ruby, Perl,
+C#, VB, Swift, Pascal, Fortran, Haskell, Objective-C, Assembly, HTML, CSS, JS, SQLite, Prolog.
+Code, Compile, Run and Debug online from anywhere in world.
+
+*******************************************************************************/
+#include <stdio.h>
+#include <vector>
+#include <iostream>
+using namespace std;
+
+void rotate_self(vector<string>& str, int index, int dire){
+    if(dire == 1){
+        char temp = str[index][7];
+        for(int i = 7; i > 0; i--){
+            str[index][i] = str[index][i-1];
+        }
+        str[index][0] = temp;
+    }else if(dire == -1){
+        char temp = str[index][0];
+        for(int i = 0; i < 7; i++){
+            str[index][i] = str[index][i+1];
+        }
+        str[index][7] = temp;
+    }
+}
+
+int main()
+{
+    int t; cin >> t;
+    
+    vector<string> str(t, "");
+    for(int i = 0; i < t; i++){
+        cin >> str[i];
+    }
+
+    int k; cin >> k;
+    
+    for(int i = 0; i < k; i++){
+        int which, dire; cin >> which >> dire;
+        
+        which = which - 1;
+        
+        rotate_self(str, which, dire);
+        
+        int leftDire = dire;
+        int rightDire = dire;
+        // 왼쪽
+        for(int j = which; j >= 1; j--){
+            // 오른쪽을 확인
+            leftDire = str[j-1][2] != str[j][6+leftDire] ? leftDire * -1: 0; 
+            if(leftDire == 0){
+                break;
+            }
+            rotate_self(str, j-1, leftDire);
+        }
+        
+        // // 오른쪽        
+        for(int j = which; j < t-1; j++){
+            // 현재 2번이랑 다음날꺼 6
+            // 왼쪽을 확인
+            rightDire = str[j][2+rightDire] != str[j+1][6] ? rightDire * -1: 0; 
+            if(rightDire == 0){
+                break;
+            }
+            rotate_self(str, j+1, rightDire);
+        }
+        
+        // cout << "---" << which << "---" << "\n";
+        // cout << str[0] << "\n";
+        // cout << str[1] << "\n";
+        // cout << str[2] << "\n";
+        // cout << str[3] << "\n";
+    }
+    
+    int answer = 0;
+    
+    for(int i = 0; i < t; i++){
+        if(str[i][0] == '1'){
+            answer++;
+        }
+    }
+    
+    
+
+    cout << answer << "\n";
+    return 0;
+}
+```
