--- a/week2/5.md
+++ b/week2/5.md
@@ -3,6 +3,226 @@
 ## Question Summary
 
 ## My solution summary
+경사로를 둬서 해결이 되냐, 안되냐 하는 문제다. 
+
+일단 큰구조는 아래처럼 잡았다. 
+
+```c++
+for(int i = 0; i < n; i++){
+    vector<int> path(n, 0);
+
+    // i 번째 row check
+    get_path(0, i, m, path);
+    if(check_path(path)) {
+//            cout << "row" << i << "\n";
+        answer++;
+    }
+
+    // i 번째 col check
+    get_path(1, i, m, path);
+    if(check_path(path)) {
+//            cout << "col" << i << "\n";
+        answer++;
+    }
+}
+```
+
+이렇게 흐름을 잡은 이유는 어쨋거나 row/col 기준으로만 검사하기 때문이다. `get_path`라는 함수는 방향과 인덱스를 주면 해당 방향과 인덱스에 대해서 `path`라는 벡터에 값을 넣어준다. 이렇게 해서 가로네 세로네 하는데 신경을 안써도 된다. 
+
+`check_path`가 실제로 경사로를 두네 마네 검사하는 함수이다. 
+
+
+- `check_path`의 구조
+크게 일단 `visited`를 선언했고, 여기는 경사로를 뒀는지를 체크하는 곳이다. 
+
+올라가고 내려가고 겹치는게 머리가 아파서 크기가 커봤자 n인 문제라 `앞에서부터 읽고 뒤에서부터 읽어서 모두 올라가는 경사로를 두는 것으로 문제를 간단하게 만들어봤다.`
+
+특히 진짜로 앞에서부터 체크했을때 올라가는 경사로인 경우에는 `차이가 1 초과 나는지를 체크해서 해당하면 그냥 바로 return false `해버렸다. 
+
+그리고 `acc`변수를 활용해서 현재 같은 높이가 몇칸째 유지됬는지를 체크해서, 높이가 커졌을때, 그 앞에다가 경사로를 둘수잇는지 없는지를 체크했다. 이때 경사로를 두게 되면 `visited`에 경사로 뒀다고 체크했다. 
+
+`앞에서부터 체크했을때 기준 내려가는 경사로를 두는 것은 뒤에서 부터 검사할때 올라가는 경사로를 두는것이다` 그래서 같은데 단지 이번에는 경사로를 둘때 이미 경사로를 둔곳은 아닌지만 추가적으로 체크했다. 
+
+
+```c++
+bool check_path(vector<int> path){
+    vector<int> visited(path.size(), false);
+    //1. 경사로를 놓은 곳에 또 경사로를 놓는 경우
+    //2. 낮은 칸과 높은 칸의 높이 차이가 1이 아닌 경우
+    //3. 낮은 지점의 칸의 높이가 모두 같지 않거나, L개가 연속되지 않은 경우
+    //4. 경사로를 놓다가 범위를 벗어나는 경우
+
+    // 올라가는 경사로 두기 && 아예 말안되는거 자르기
+    int prev = path[0]; // 시작
+    int acc = 1; // 같은 높이가 누적되는 것
+    for(int i = 1; i < path.size(); i++){
+        if(prev == path[i]){
+            acc++;
+        }else if(prev - path[i] > 1 || prev - path[i] < -1){
+            return false;
+        }else if(prev < path[i]){
+            // 올라가는 경우
+            if(acc < l){
+                // 올라가는 경사로를 둘수 없어서 false
+                return false;
+            }else{
+                // 다른 경사로를 못두게 체크
+                for(int j = i - 1; j >= i - l; j--){
+                    visited[j] = true;
+                }
+                acc = 1;
+            }
+        }
+        prev = path[i];
+    }
+
+    // 내려가는 경사로 두기
+    prev = path[path.size() - 1];
+    acc = 1;
+    for(int i = path.size() - 2; i >= 0; i--){
+        if(prev == path[i]){
+            acc++;
+        }else if(prev < path[i]){
+            // 뒤에서 부터 검사
+            // 내려가는 경우경우
+            if(acc < l){
+                // 올라가는 경사로를 둘수 없어서 false
+                return false;
+            }else{
+                // 다른 경사로를 못두게 체크
+                for(int j = i + 1; j <= i + l; j++){
+                    if(visited[j] == true){
+                        // 놨던 곳에 놔야해서 false
+                        return false;
+                    }
+                    visited[j] = true;
+                }
+                acc = 1;
+            }
+        }
+        prev = path[i];
+    }
+    return true;
+}
+```
+
+- 후기
+얘는 첨에 경우가 너무 어려워져서 골이 아팠는데, 문제를 간소화하고, 함수를 잘 활용해서 내가 어떤 처리를 하는지 내눈에도 잘 보이게 하니까 해결할 수 있었다. 
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
 
+using namespace std;
+int n, l;
+
+void get_path(int direction, int index, vector<vector<int>> &m, vector<int> &v){
+    if(direction == 0){
+        // 가로 방향
+        for(int i = 0; i < v.size(); i++){
+            v[i] = m[index][i];
+        }
+    }else{
+        // 세로 방향
+        for(int i = 0; i < v.size(); i++){
+            v[i] = m[i][index];
+        }
+    }
+}
+
+bool check_path(vector<int> path){
+    vector<int> visited(path.size(), false);
+    //1. 경사로를 놓은 곳에 또 경사로를 놓는 경우
+    //2. 낮은 칸과 높은 칸의 높이 차이가 1이 아닌 경우
+    //3. 낮은 지점의 칸의 높이가 모두 같지 않거나, L개가 연속되지 않은 경우
+    //4. 경사로를 놓다가 범위를 벗어나는 경우
+
+    // 올라가는 경사로 두기 && 아예 말안되는거 자르기
+    int prev = path[0]; // 시작
+    int acc = 1; // 같은 높이가 누적되는 것
+    for(int i = 1; i < path.size(); i++){
+        if(prev == path[i]){
+            acc++;
+        }else if(prev - path[i] > 1 || prev - path[i] < -1){
+            return false;
+        }else if(prev < path[i]){
+            // 올라가는 경우
+            if(acc < l){
+                // 올라가는 경사로를 둘수 없어서 false
+                return false;
+            }else{
+                // 다른 경사로를 못두게 체크
+                for(int j = i - 1; j >= i - l; j--){
+                    visited[j] = true;
+                }
+                acc = 1;
+            }
+        }
+        prev = path[i];
+    }
+
+    // 내려가는 경사로 두기
+    prev = path[path.size() - 1];
+    acc = 1;
+    for(int i = path.size() - 2; i >= 0; i--){
+        if(prev == path[i]){
+            acc++;
+        }else if(prev < path[i]){
+            // 뒤에서 부터 검사
+            // 내려가는 경우경우
+            if(acc < l){
+                // 올라가는 경사로를 둘수 없어서 false
+                return false;
+            }else{
+                // 다른 경사로를 못두게 체크
+                for(int j = i + 1; j <= i + l; j++){
+                    if(visited[j] == true){
+                        // 놨던 곳에 놔야해서 false
+                        return false;
+                    }
+                    visited[j] = true;
+                }
+                acc = 1;
+            }
+        }
+        prev = path[i];
+    }
+    return true;
+}
+int main() {
+    cin >> n >> l;
+    vector<vector<int>> m(n, vector<int> (n, 0));
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < n; j++){
+            int temp; cin >> temp;
+            m[i][j] = temp;
+        }
+    }
+
+    int answer = 0;
+    for(int i = 0; i < n; i++){
+        vector<int> path(n, 0);
+
+        // i 번째 row check
+        get_path(0, i, m, path);
+        if(check_path(path)) {
+//            cout << "row" << i << "\n";
+            answer++;
+        }
+
+        // i 번째 col check
+        get_path(1, i, m, path);
+        if(check_path(path)) {
+//            cout << "col" << i << "\n";
+            answer++;
+        }
+    }
+
+    cout << answer << "\n";
+
+    return 0;
+}
+
+```
