--- a/week2/6.md
+++ b/week2/6.md
@@ -3,6 +3,204 @@
 ## Question Summary
 
 ## My solution summary
+풀었다. 놀랍구먼
+
+```c++
+int pad[101][101]; // 1-n 범위만 사용,ㅅ
+int visited[101][101]; // 뱀 몸이 있는지 체크
+char checkTime[10001]; // 10000초까지만 움직인다
+```
+
+이 세개를 활용해서 현재 뱀이 어디에 있는지를 체크했다. 
+
+- pad는 사과가 어디있는지 표시한 것이고, 사과가 있으면 1, 없거나 먹었으면 0이다 . 
+
+- visited는 현재 뱀이 어디있는지(몸이 어디 놓여있는지 체크하는 배열) 보여준다. 새로운 칸으로 이동하려는데 몸이 있으면 못가게 하고, 경로 파악하는데 머리아프지 않게 추가했다. 
+
+- pad와 visited가 눈에 잘 안보여서 함수를 통해서 출력을 하도록 했다.
+```c++
+void printPad(){
+    for(int i = 1; i <= n; i++){
+        for(int j = 1; j <=n; j++){
+            cout << pad[i][j];
+        }
+        cout << "\n";
+    }
+    cout << "\n";
+}
+
+void printVisited(){
+    for(int i = 1; i <= n; i++){
+        for(int j = 1; j <=n; j++){
+            cout << visited[i][j];
+        }
+        cout << "\n";
+    }
+    cout << "\n";
+}
+```
+
+특히 printVisited를 통해서 각 스텝에서 뱀이 어디에 있는지 출력해서 보니까, 좋았다. 
+
+- checkTime은 각 루프가 끝날때(x=3 이면 3초에 대해서 뱀 머리 늘리고 사과먹고 하는거 끝나고), 이제 해당 초가 끝나고 direction을 바꿔야하는지 체크하는 배열이다. 
+```c++
+// x = 1일때는 (1,1)에 있었고, x = 2일 때 가야하는 방향을 구한다.
+if(checkTime[x]){
+    dire = getDirection(dire, checkTime[x]);
+}
+x++;
+```
+
+이렇게 checkTime에 뭐가 있으면(L/D) 방향을 전환한다. 그리고 초를 증가시킨다. (3초가 끝날때 방향 전환했으면 이제 다음 판은 4초이다)
+
+- 메인 로직
+    - deque를 통해서 뱀의 머리부터(front) 뱀의 꼬리까지를 표현(back)
+    - 매 새로운 판에서 현재 머리를 기준으로 어느 방향으로 증가하는지 구해서 좌표를 구한다. `nx, ny`
+    - 이게 범위를 증가하면(벽에 닿으면) 규칙대로 게임을 종료한다. 
+
+    - 만약에 사과가 있으면 `if(pad[nx][ny] == 1)` 사과를 먹고, 머리에 추가해준다. 그리고 `visited[nx][ny]=1` 로 표시해서 뱀이 놓여있다고 표시해준다. 
+    - 그 외에는 방문했던가 사과를 먹었던 거다. 
+      - `if(visited[nx][ny] == 1)` 이면 뱀이 놓여있는거다. `게임 종료`
+      - 뱀 머리를 늘린다
+        ```c++
+        snake.push_front({nx, ny}); // 뱀 머리길이 추가
+        visited[nx][ny] = 1; // 몸도 놓여있다고 표시
+        ```
+      - 그리고 꼬리를 구해서, 빼고, Visited에서 뱀이 놓여있지 않다고 표시한다 
+        ```c++
+        int ex = snake.back().first;
+        int ey = snake.back().second;
+        snake.pop_back();
+        visited[ex][ey] = 0;
+        ```
+
+- 후기: 
+  - 시작이 1초라는건지 0초라는건지 긴가 민가해서 삽질을 하다가 시작을 0초로 하니까 문제가 해결이 됬다. 
+
 
 ## My code
 
+```c++
+#include <iostream>
+//#include <vector>
+#include <deque>
+
+using namespace std;
+int n; // 보드의 크기
+int k; // 사과의 개수
+int l; // 방향 변환 횟수
+int pad[101][101]; // 1-n 범위만 사용,ㅅ
+int visited[101][101]; // 뱀 몸이 있는지 체크
+char checkTime[10001]; // 10000초까지만 움직인다
+int dx[4] = {0, 1, 0, -1};
+int dy[4] = {1, 0, -1, 0};
+deque<pair<int, int>> snake; // 뱀
+
+int getDirection(int curDirection, char leftOrRight){
+    if(leftOrRight == 'D'){
+        return curDirection + 1 == 4 ?  0 :  curDirection + 1;
+    }
+
+    if(leftOrRight == 'L'){
+        return curDirection - 1 == -1 ?  3 :  curDirection - 1;
+    }
+}
+
+void printPad(){
+    for(int i = 1; i <= n; i++){
+        for(int j = 1; j <=n; j++){
+            cout << pad[i][j];
+        }
+        cout << "\n";
+    }
+    cout << "\n";
+}
+
+void printVisited(){
+    for(int i = 1; i <= n; i++){
+        for(int j = 1; j <=n; j++){
+            cout << visited[i][j];
+        }
+        cout << "\n";
+    }
+    cout << "\n";
+}
+
+int main() {
+    cin >> n;
+
+    cin >> k;
+    for(int i = 0; i < k; i++){
+        int x, y; cin >> x >> y;
+        pad[x][y] = 1; // 사과 있음. 1,1 -> 1행 1열, 우리기준으로는 1-n 범위니까 최상단 최좌측임
+    }
+//    printPad();
+
+
+    cin >> l;
+    for(int i = 0; i < l; i++){
+        int x; char c; cin >> x >> c;
+        checkTime[x] = c;
+    }
+
+    int x = 0;
+    int dire = 0;
+    snake.push_back({1,1});
+    visited[1][1] = 1;
+
+    // x = 1일때는 (1,1)에 있었고, x = 2일 때 가야하는 방향을 구한다.
+    if(checkTime[x]){
+        dire = getDirection(dire, checkTime[x]);
+    }
+    x++;
+
+    while(snake.size() >= 1 && x <= 10000){
+//        printVisited();
+        // 뱀 머리가 어디로 가야하는지
+        int nx = snake.front().first + dx[dire];
+        int ny = snake.front().second + dy[dire];
+
+        if(nx <= 0 || ny <= 0 || nx > n || ny > n) {
+//            cout << x << " " << nx << " " << ny << "\n";
+//            cout << "벗어났다" << "\n";
+            break;
+        }
+
+        if(pad[nx][ny] == 1){
+            // 사과가 있으면 한번도 방문한적 없다
+            pad[nx][ny] = 0; // 사과 먹기
+            snake.push_front({nx, ny}); // 뱀 머리길이 추가
+            visited[nx][ny] = 1; // 몸도 놓여있다고 표시
+        }else{
+            // 방문한적 있을수도 있다.
+            if(visited[nx][ny] == 1){
+                // 몸이 이미 놓여있다.
+//                cout << "몸이 있다" << "\n";
+                break;
+            }else{
+                snake.push_front({nx, ny}); // 뱀 머리길이 추가
+                visited[nx][ny] = 1; // 몸도 놓여있다고 표시
+
+                int ex = snake.back().first;
+                int ey = snake.back().second;
+                snake.pop_back();
+                visited[ex][ey] = 0;
+            }
+        }
+
+        // 해당하는게 끝나고, 다음 direction을 체크
+        // x = 3일때, 3초인거 지나고 나면 방향 바꾸라고 하면 방향 바꾼다, 그다음 시간은 4초로 증가한다.
+        if(checkTime[x]){
+//            cout << "회전 x: " << x << " " << dire << " ";
+            dire = getDirection(dire, checkTime[x]);
+//            cout << dire << "\n";
+        }
+        x++;
+    }
+
+    cout << x << "\n";
+
+    return 0;
+}
+
+```
