8번 - 나중에 다시풀자

--- a/week2/8.md
+++ b/week2/8.md
@@ -3,6 +3,281 @@
 ## Question Summary
 
 ## My solution summary
+아니 이건 또 뭔소리고?
+
+- 일단은 막대를던져서 맞으면 지우는 것
+- 골때리는 것은.. 미네랄이 부서지고 나머지가 공중에 떠있어서 바닥에 떨어져야하는 경우
+
+- 내가 짠 로직(클러스터가 생겨서 떨어지는 부분은 구현 x)
+```c++
+#include <iostream>
+#include <vector>
+
+using namespace std;
+int r;
+int c;
+char arr[101][101];
+int n;
+
+void printMap(){
+    for(int i = r; i >= 0; i--){
+        for(int j = 0; j < c; j++){
+            cout << arr[i][j];
+        }
+        cout << "\n";
+    }
+}
+
+int main() {
+    cin >> r >> c;
+
+    for(int i = 0; i < r; i++){
+        for(int j = 0; j < c; j++){
+            // 첫번째 줄 입력이 가장 윗줄로 가도록
+            cin >> arr[r-1-i][j];
+        }
+    }
+
+//    printMap();
+
+    cin >> n;
+
+    for(int i = 0; i < n; i++){
+        int targetHeight = 0; cin >> targetHeight; targetHeight--; // 6이라고 오면 5로 조정한다(0부터 넣었응께~)
+
+        int pos = -1;
+        int nextDirection = 1; // 왼쪽에서부터 가기
+        if(i % 2 == 1){
+            pos = c;
+            nextDirection = -1; // 오른쪽에서부터 가기
+        }
+
+        while(true){
+            pos += nextDirection;
+
+            if(pos < 0 || pos >= c){
+                // 끝까지 왔다.
+                break;
+            }
+
+            if(arr[targetHeight][pos] == 'x'){
+                // 미네랄을 만났다.
+                arr[targetHeight][pos] = '.';
+                
+                // 클러스터가 생겼는지 체크
+                break;
+            }
+        }
+    }
+
+    printMap();
+
+    return 0;
+}
+```
+
+
+- 다른 똑똑한 사람의 도움
+```c++
+if(arr[targetHeight][pos] == 'x'){
+    // 미네랄을 만났다.
+    arr[targetHeight][pos] = '.';
+    
+    // 클러스터가 생겼는지 체크
+    break;
+}
+```
+
+미네랄을 부수고 하는 로직까지는 구현했는데, 클러스터가 생겼는지 어떻게 확인하란건지 모르겠더라. 이건 정말 고민을 한다고 알내용이 아니라 똑똑이들의 도움을 받았다. 
+  - 똑똑이들이 나도 똑똑할거라 생각하고 써놓은 자료 뿐이라, 엄청나게 도움은 안됬지만, 대강 머라구머라구 하는진 이해해보려고 했다.
+  - bfs를 써도되나 싶었는데 bfs를 써서 그룹을 찾는다
+  - 해당 그룹이 바닥에 붙어있으면 클러스터가 없다는 것을 파악(그냥 끝)
+  - 해당 그룹의 가장 낮은 포인트가 공중에 있으면 공중에 떠있구나 파악
+  - 그럼이제 얼마만큼 내려줄지를 파악, 근데 문제에서 이제 떨어질때, 가장 아래에 있는애가 무조건 바닥위나 다른 미네랄 위로떨어지게끔 준다고 했다. 
+  - 그럼 가장 아래의 미네랄을 기준으로 얼만큼 내려줄지만 파악해서 전체를 싹 내려주면 끝!
+
+- 후기
+이건 결국에 계속 반례가 걸려서 못풀었다. 다음에 다시 풀어야지(다른 사람들의 풀이만 참고했다. )
+
 
 ## My code
+1. 반계가 계속 걸리는 코드(simulate 구현에서 문제가 있다. )
+```c++
+#include <iostream>
+#include <vector>
+#include <queue>
+
+using namespace std;
+int r;
+int c;
+char arr[101][101];
+int n;
+int dx[4] = {1,0,-1,0};
+int dy[4] = {0,1,0,-1};
+vector<pair<int, int>> group;
+
+void printMap(){
+    for(int i = r; i >= 0; i--){
+        for(int j = 0; j < c; j++){
+            cout << arr[i][j];
+        }
+        cout << "\n";
+    }
+}
+
+void getGroup(int i, int j, vector<vector<int>> &visited, int &lowest){
+    // bfs 함
+    queue<pair<int, int>> q;
+    group.push_back({i, j});
+    q.push({i, j});
+    visited[i][j] = 1;
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        q.pop();
+
+        for(int k = 0; k < 4; k++){
+            int nx = x + dx[k];
+            int ny = y + dy[k];
+
+            if(nx < 0 || ny < 0 || nx >= r || ny >= c || arr[nx][ny] == '.' || visited[nx][ny] == 1) continue;
+
+            visited[nx][ny] = 1;
+            q.push({nx, ny});
+            group.push_back({nx, ny});
+
+            if(nx < lowest){
+                lowest = nx;
+            }
+        }
+    }
+}
+
+void simulate(){
+    // - dfs를 써도되나 싶었는데 dfs를 써서 그룹을 찾는다
+    // - 해당 그룹이 바닥에 붙어있으면 클러스터가 없다는 것을 파악(그냥 끝)
+    // - 해당 그룹의 가장 낮은 포인트가 공중에 있으면 공중에 떠있구나 파악
+    // - 그럼이제 얼마만큼 내려줄지를 파악, 근데 문제에서 이제 떨어질때, 가장 아래에 있는애가 무조건 바닥위나 다른 미네랄 위로떨어지게끔 준다고 했다.
+    // - 그럼 가장 아래의 미네랄을 기준으로 얼만큼 내려줄지만 파악해서 전체를 싹 내려주면 끝!
+    vector<vector<int>> visited(r, vector<int> (c, 0));
+    for(int i = 0; i < r; i++){
+        for(int j = 0; j < c; j++){
+            if(arr[i][j] == '.' || visited[i][j] == 1) continue;
+
+            int lowest = i; // 가장 낮은 포인트를 높게준다
+            group.clear();
+            getGroup(i, j, visited, lowest);
+
+            if(lowest > 0) {
+                // 공중에 떠 있다는 것
+                // cout << "공중에 떠있다!" << i << "," << j << " " << lowest << "\n";
+                // group 값을 통해서 해결
+
+                // 가장 낮은 것들의 목록을 가져온다
+                // 얼마나 내려가야하는지를 체크
+                int bottomHeight = -1; // 얼마나 내려갈지 maximum
+//                cout << "-------------" << lowest << "\n";
+                for (int k = 0; k < (int)group.size(); k++) {
+//                    cout << "lowest" << lowest << ", group: " << group[k].first << ", " << group[k].second <<"\n";
+                    arr[group[k].first][group[k].second] = '+';
+
+                    if(lowest == group[k].first){
+//                      가장 낮은 라인들이 바닥이나, 다른 미네랄까지의 거리를 구하는 것
+//cout << "here" << "\n";
+                        for (int m = 0; m < group[k].first; m++) {
+                            if (arr[m][group[k].second] == 'x') {
+//                                temp = m; // 가장 높은 x의 위치 찾기
+                                    if(m > bottomHeight){
+//                                        cout << "!!!!!" << group[k].first << " " << m << "\n";
+                                        bottomHeight = m;
+                                    }
+                            }
+                        }
+                    }
+                }
+
+
+//                cout << "가장 바닥" << bottomHeight << "\n";
+
+                for (int k = 0; k < (int)group.size(); k++) {
+                    int nx = group[k].first;
+                    int ny = group[k].second;
+                    arr[nx][ny] = '.';
+                }
+//                cout << "간격 " << bottom - 1 <<
+//
+                for (int k = 0; k < (int)group.size(); k++) {
+//                    cout << "얼마나 " << bottomHeight + 1 << "\n";
+                    int nx;
+                    if(bottomHeight == -1){
+                        nx = group[k].first - lowest;
+                    }else{
+                        nx = group[k].first - (lowest - bottomHeight - 1);
+                    }
+
+                    int ny = group[k].second;
+                    arr[nx][ny] = 'x';
+                }
+
+//                cout << "확인 " << "\n";
+//                printMap();
+                // 이렇게 하고나면, 종료해야한다. 다른 것들은 이제 검사안할거기때문에
+                return;
+            }
+        }
+    }
+}
+
+
+int main() {
+    cin >> r >> c;
+
+    for(int i = 0; i < r; i++){
+        for(int j = 0; j < c; j++){
+            // 첫번째 줄 입력이 가장 윗줄로 가도록
+            cin >> arr[r-1-i][j];
+        }
+    }
+
+    cin >> n;
+
+    for(int i = 0; i < n; i++){
+        int targetHeight = 0; cin >> targetHeight;
+        targetHeight--; // 6이라고 오면 5로 조정한다(0부터 넣었응께~)
+        int pos = -1;
+        int nextDirection = 1; // 왼쪽에서부터 가기
+        if(i % 2 == 1){
+            pos = c;
+            nextDirection = -1; // 오른쪽에서부터 가기
+        }
+
+        while(true){
+            pos += nextDirection;
+
+            if(pos < 0 || pos >= c){
+                // 끝까지 왔다.
+                break;
+            }
+
+            if(arr[targetHeight][pos] == 'x'){
+                // 미네랄을 만났다.
+                arr[targetHeight][pos] = '.';
+                // 클러스터가 생겼는지 체크
+                cout << i << "번째거 부수기" << "\n";
+                printMap();
+//                cout << i << "번쩨 " << "\n";
+                simulate();
+                cout << i << "번쩨 " << "\n";
+                printMap();
+                break;
+            }
+        }
+    }
+
+    printMap();
+
+    return 0;
+}
+```
 
