--- a/week3/9.md
+++ b/week3/9.md
@@ -4,5 +4,127 @@
 ## Question Summary
 
 ## My solution summary
+- 규칙이 특이한데,반복문으로 해결가능하다. 문자는 여러글자일 수 있다. 처음에 한글자 문자 입력만 가능한줄알았는데, 여러 문자가 입력이 가능한다. 
+
+- 우선 왼쪽 문자열을 분리한다. 
+```c++
+bool isLeft = true;
+string left = "";
+```
+
+- 오른쪽 문자열을 키값(문자 부분)과 특수 기호 부분으로 나누었다. 
+```c++
+int i = 0;
+int j = 1;
+while(i < s.length()){
+    if(isLeft){
+        if(s[i] == ' '){
+            isLeft = false;
+        }else{
+            left += s[i];
+        }
+    }else{
+        string key = ""; // 현재 문자열
+        while(s[i] != '*' && s[i] != '[' && s[i] != ']' && s[i] != '&' && s[i] != ';' && s[i] != ','){
+            key += s[i];
+            i++;
+        }
+
+        string sr = ""; //오른쪽에 있는 문자열
+        j = 0; //
+        while(true) {
+            if (s[i + j] == ',' || s[i + j] == ';') {
+                j += 2;
+                break;
+            }
+            sr += s[i + j];
+            j++;
+        }
+
+        right.push_back({key, sr});
+    }
+    i += j;
+}
+```
+
+  - 키값은 문자가 `s[i] != '*' && s[i] != '[' && s[i] != ']' && s[i] != '&' && s[i] != ';' && s[i] != ','`를 만족할때까지 나오는 부분이다. 
+  - 특수 기호는 그다음부터 `s[i + j] == ',' || s[i + j] == ';'` 이다. 
+  - 이 pair를 right이라는 벡터에 넣어준다. 
+
+
+- reverse함수는 특수기호 순서를 뒤집어 주는 함수이다. 
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <queue>
+#include <string>
+
+using namespace std;
+
+string reverse(string s) {
+    string news = "";
+
+    int i = s.length() - 1;
+    while(i >= 0){
+        if(s[i] == '*' || s[i] == '&'){
+            news += s[i];
+            i--;
+        }else{
+            news += s[i-1];
+            news += s[i];
+            i -= 2;
+        }
+    }
+    return news;
+}
+
+int main() {
+    string s;
+    getline(cin, s);
+
+    vector<pair<string, string>> right;
+
+    bool isLeft = true;
+    string left = "";
+
+    int i = 0;
+    int j = 1;
+    while(i < s.length()){
+        if(isLeft){
+            if(s[i] == ' '){
+                isLeft = false;
+            }else{
+                left += s[i];
+            }
+        }else{
+            string key = ""; // 현재 문자열
+            while(s[i] != '*' && s[i] != '[' && s[i] != ']' && s[i] != '&' && s[i] != ';' && s[i] != ','){
+                key += s[i];
+                i++;
+            }
+
+            string sr = ""; //오른쪽에 있는 문자열
+            j = 0; //
+            while(true) {
+                if (s[i + j] == ',' || s[i + j] == ';') {
+                    j += 2;
+                    break;
+                }
+                sr += s[i + j];
+                j++;
+            }
+
+            right.push_back({key, sr});
+        }
+        i += j;
+    }
+
+    for(int i = 0; i < right.size(); i++){
+        cout << left << reverse(right[i].second) << " " << right[i].first << ";\n";
+    }
+
+    return 0;
+}
+```
