--- a/week3/11.md
+++ b/week3/11.md
@@ -4,5 +4,85 @@
 ## Question Summary
 
 ## My solution summary
+노가다로 싹다 돌려보면 된다. 모양이 회전 대칭 다 있는데, 다 그려보고 좌표 찍어보고, 도형마다 다 직접 놓아보면 된다. 
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <string>
+
+using namespace std;
+int n, m;
+
+pair<int,int> arr[19][4] = {
+        {{0,0}, {0,1}, {0, 2}, {0,3}},
+        {{0,0}, {1,0}, {2, 0}, {3, 0}},
+        {{0,0}, {1,0},{2,0},{2,1}},
+        {{0,0}, {0,1}, {0,2}, {1,0}},
+        {{0,0},{0,1},{1,1},{2,1}},
+        {{1,0}, {1,1}, {1,2}, {0,2}},
+        {{0,0}, {0,1}, {1,0}, {2,0}},
+        {{0,0}, {1,0}, {1,1}, {1,2}},
+        {{0,1}, {1,1}, {2,1}, {2,0}},
+        {{0,0}, {0,1}, {0,2}, {1,2}},
+        {{0,0}, {0, 1}, {1, 0}, {1,1}},
+        {{0,0}, {1,0}, {1, 1}, {2, 1}},
+        {{1, 0}, {1, 1}, {0, 1}, {0, 2}},
+        {{0, 1}, {1, 1}, {1, 0}, {2, 0}},
+        {{0, 0}, {0, 1}, {1, 1}, {1,2}},
+        {{0, 0}, {0, 1}, {0, 2}, {1, 1}},
+        {{1, 0}, {0, 1}, {1, 1}, {2, 1}},
+        {{1, 0}, {1, 1}, {1, 2}, {0, 1}},
+        {{0, 0}, {1, 0}, {2, 0}, {1,1}}
+};
+
+
+int main() {
+    cin >> n >> m;
+
+    vector<vector<int>> paper(n, vector<int> (m, 0));
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            cin >> paper[i][j];
+        }
+    }
+
+    int mmax = 0;
+
+    for(int mino = 0; mino < 19; mino++){
+        for(int i = 0; i < n; i++){
+            for(int j = 0; j < m; j++){
+                pair<int, int> box1 = {arr[mino][0].first + i, arr[mino][0].second + j};
+                pair<int, int> box2 = {arr[mino][1].first + i, arr[mino][1].second + j};
+                pair<int, int> box3 = {arr[mino][2].first + i, arr[mino][2].second + j};
+                pair<int, int> box4 = {arr[mino][3].first + i, arr[mino][3].second + j};
+
+                if(box1.first < 0 || box1.first >= n || box1.second < 0 || box1.second >= m){
+                    continue;
+                }
+                if(box2.first < 0 || box2.first >= n || box2.second < 0 || box2.second >= m){
+                    continue;
+                }
+                if(box3.first < 0 || box3.first >= n || box3.second < 0 || box3.second >= m){
+                    continue;
+                }
+                if(box4.first < 0 || box4.first >= n || box4.second < 0 || box4.second >= m){
+                    continue;
+                }
+
+//                cout << box1.first << ", " << box1.second << "\n";
+                int thisSum = paper[box1.first][box1.second] + paper[box2.first][box2.second] + paper[box3.first][box3.second] + paper[box4.first][box4.second];
+                if(thisSum > mmax) {
+                    mmax = thisSum;
+                }
+            }
+        }
+    }
+
+    cout << mmax << "\n";
+
+    return 0;
+}
+
+```
