--- a/week3/12.md
+++ b/week3/12.md
@@ -4,5 +4,80 @@
 ## Question Summary
 
 ## My solution summary
+아무리 브루트 포스라지만서도... 이렇게까지풀어도 되는것일까 의문이 드는 문제. 
+
+recursive는 암만해도 헷갈릴때가많아서 순열로 해결했다. 
+
+문제에서 홀수갯수도 주는줄 조건을 빠트리는 바람에 한참 삽질했다. 
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+using namespace std;
+int n;
+
+int main() {
+    cin >> n;
+
+    vector<vector<int>> power(n, vector<int> (n, 0));
+
+    int mmin = 100;
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < n; j++){
+            cin >> power[i][j];
+            mmin += power[i][j];
+        }
+    }
+
+    vector<int> checker(n, 0);
+    for(int i = n-1; i >= n/2; i--){
+        checker[i] = 1;
+    }
+
+
+
+    do {
+        vector<int> first;
+        vector<int> second;
+        for(int i = 0; i < checker.size(); i++){
+            if(checker[i]){
+                first.push_back(i);
+            }else{
+                second.push_back(i);
+            }
+        }
+
+//        cout << "size: " << first.size() << " " << second.size() << "\n";
+        int firstScore = 0;
+        int secondScore = 0;
+        for(int i = 0; i < first.size(); i++){
+            for(int j = i+1; j < first.size(); j++){
+                firstScore += power[first[i]][first[j]];
+                firstScore  += power[first[j]][first[i]];
+            }
+        }
+
+        for(int i = 0; i < second.size(); i++){
+            for(int j = i+1; j < second.size(); j++){
+                secondScore += power[second[i]][second[j]];
+                secondScore += power[second[j]][second[i]];
+            }
+        }
+
+//        cout << firstScore << " " << secondScore << "\n";
+        int diff = firstScore > secondScore ? firstScore - secondScore: secondScore - firstScore;
+
+        if(diff < mmin){
+            mmin = diff;
+        }
+
+    }while(next_permutation(checker.begin(), checker.end()));
+
+    cout << mmin << "\n";
+
+    return 0;
+}
+
+```
