--- a/week3/13.md
+++ b/week3/13.md
@@ -4,5 +4,212 @@
 ## Question Summary
 
 ## My solution summary
+이것도 아무리 브루트 포스라지만서도... 이렇게 풀어도 되는가... 하는 의아함이 있다. 
+
+- 일단 lab과 visited를 값을 설정한다
+
+```c++
+vector<vector<int>> lab(n, vector<int> (m, 0));
+vector<vector<int>> visited(n, vector<int> (m, 0)); // 0인곳만 벽을 세울 수 있다
+
+
+for(int i = 0; i < n; i++){
+    for(int j = 0; j < m; j++){
+        cin >> lab[i][j];
+        if(lab[i][j] == 2){
+            virus.push_back({i, j});
+            visited[i][j] = 1; // 벽 못 세운다
+        }else if(lab[i][j] == 1){
+            visited[i][j] = 1; // 벽 못 세운다.
+        }
+    }
+}
+```
+
+lab은 진짜들어오는 값을 저장하는 곳이고, visited는 0이 아닌곳은 다 방문 못한다고 해놓는거다. `나중에 visited안된걸 안전 영역으로 계산하려고`
+
+- `recursive(0, 0, 0, lab, visited);` 얘는 `void recursive(int count, int x, int y, vector<vector<int>> &lab, vector<vector<int>> &visited){`
+
+이 함수인데, 벽을 몇개 세웠는지, 지도의 어디부터 검사할지를 건네주는거다. 
+
+  - count 가 3이면 이제 virus 기준으로 dfs를 해서 바이러스를 다 채운다. 
+
+  - 좌표는 아래처럼 찾는다
+    ```c++
+    for(int i = x; i < n; i++){
+        for(int j = y; j < m; j++){
+            if(lab[i][j] == 0 && visited[i][j] == 0){
+                visited[i][j] = 1;
+                temp.push_back({i, j});
+                recursive(count+1, i, 0, lab, visited);
+                temp.pop_back();
+                visited[i][j] = 0;
+            }
+        }
+    }
+    ```
+
+    벽을 세우면 세웠다고 표시하고, 이제까지 검사 안한곳을 기준으로 다시 순회한다. 
+
+- dfs를 돌리는 건 모든 virus의 위치를 기준으로 돌린다
+  
+```c++
+int countSafe(vector<vector<int>> visited){
+    int c = 0;
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            if(visited[i][j] == 0){
+                c++;
+            }
+//            cout << visited[i][j] << " ";
+        }
+//        cout << "\n";
+    }
+//    cout << "\n";
+
+    return c;
+}
+```
+
+
+- 후기
+이렇게 막 풀어도 되나 싶다. 
 
 ## My code
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+
+using namespace std;
+int n, m;
+
+vector<pair<int, int>> temp;
+vector<pair<int, int>> virus;
+
+int maxSafe = 0;
+
+int countSafe(vector<vector<int>> visited){
+    int c = 0;
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            if(visited[i][j] == 0){
+                c++;
+            }
+//            cout << visited[i][j] << " ";
+        }
+//        cout << "\n";
+    }
+//    cout << "\n";
+
+    return c;
+}
+
+int dx[4] = {1,0,-1,0};
+int dy[4] = {0,1,0,-1};
+
+void bfs(vector<vector<int>> lab, vector<vector<int>> visited){
+//    cout << "before ---- \n";
+//    countSafe(visited);
+
+    for(int i = 0; i < virus.size(); i++){
+        int sx = virus[i].first;
+        int sy = virus[i].second;
+        // virust는 시작점 무조건 visited되어있음
+
+        queue<pair<int, int>> q;
+        q.push({sx, sy});
+
+        while(!q.empty()){
+            int x = q.front().first;
+            int y = q.front().second;
+            q.pop();
+
+            for(int j = 0; j < 4; j++){
+                int nx = x + dx[j];
+                int ny = y + dy[j];
+
+                if(nx < 0 || nx >= n || ny < 0 || ny >= m){
+                    continue;
+                }
+
+                if(visited[nx][ny] == 0){
+                    visited[nx][ny] = 1;
+                    q.push({nx, ny});
+                }
+//                if(visited[nx][ny] == 1 && lab[nx][ny] == 2){
+//                    visited[nx][ny] = 1;
+//                }
+            }
+        }
+
+    }
+
+//    cout << "after ---- \n";
+    int result = countSafe(visited);
+    if(result > maxSafe){
+        maxSafe = result;
+    }
+}
+
+void recursive(int count, int x, int y, vector<vector<int>> &lab, vector<vector<int>> &visited){
+    if(count == 3){
+        // 벽 세개 다 세웠다.
+//        cout << "three" << "\n";
+
+//        for(int i = 0; i < 3; i++){
+//            cout << temp[i].first << ", " << temp[i].second << " ";
+//        }
+        bfs(lab, visited);
+        return;
+    }
+
+    if(count > 3){
+        return;
+    }
+
+    for(int i = x; i < n; i++){
+        for(int j = y; j < m; j++){
+            if(lab[i][j] == 0 && visited[i][j] == 0){
+                visited[i][j] = 1;
+                temp.push_back({i, j});
+                recursive(count+1, i, 0, lab, visited);
+                temp.pop_back();
+                visited[i][j] = 0;
+            }
+        }
+    }
+
+    return;
+}
+
+int main() {
+    cin >> n >> m;
+
+    vector<vector<int>> lab(n, vector<int> (m, 0));
+    vector<vector<int>> visited(n, vector<int> (m, 0)); // 0인곳만 벽을 세울 수 있다
+
+
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < m; j++){
+            cin >> lab[i][j];
+            if(lab[i][j] == 2){
+                virus.push_back({i, j});
+                visited[i][j] = 1; // 벽 못 세운다
+            }else if(lab[i][j] == 1){
+                visited[i][j] = 1; // 벽 못 세운다.
+            }
+        }
+    }
+
+//    cout << "start \n";
+//    countSafe(visited);
+//    cout << "\n";
+    // count
+    recursive(0, 0, 0, lab, visited);
+
+    cout << maxSafe << "\n";
+    return 0;
+}
+```
